syntax="proto3";
package userService;
option go_package="userService/proto";
import  "google/protobuf/empty.proto";

message userRequest{
  string name=1;
  string phone=2;
  string EmpID=3;
  string email=4;
  string  company=5;
  int32 id=6;
  repeated string roles=7;
  string Timestamp=8;
  string Password=9;
}

message userResponse{
  string name=1;
  string phone=2;
  string EmpID=3;
  string email=4;
  string  company=5;
  int32 id=6;
  repeated string roles=7;
  string Timestamp=8;
  string Password=9;
}

message userID{
  int32 ID=1;
}
message userEmail{
  string email=1;
}

message ListUserResponse{
  repeated userResponse users=1;
}

service userService {
  rpc createUser(userRequest) returns (userResponse);
  rpc GetUser(userID) returns (userResponse);
  rpc GetUserByEmail(userEmail) returns (userResponse);
  rpc GetAllusers(google.protobuf.Empty) returns (ListUserResponse);
  rpc updateuser(userRequest) returns(google.protobuf.Empty);
  rpc deleteuser(userID) returns (google.protobuf.Empty);
}